# nix-tree-sitter-rs

./: Cargo.toml  build.rs  grammar.js  package.json  pyproject.toml  tree-sitter.json
queries/: README.md  context.scm  folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  matchup.scm  tags.scm  textobjects.scm
src/: ast.rs  ast_with_loc.rs  cache.rs  grammar.json  grammar.rs  lib.rs  main.rs  node-types.json  parser.c  plugins.rs  query.rs  scanner.c  scanner.rs  stub_parser.c  visitor.rs
src/analysis/: dependency.rs  lint.rs  mod.rs  scope.rs  semantic.rs
src/core/: cache.rs  grammar.rs  mod.rs  parser.rs
src/error/: context.rs  diagnostic.rs  mod.rs  recovery.rs
src/parser/: config.rs  incremental.rs  mod.rs  result.rs
src/transform/: codegen.rs  mod.rs  normalize.rs  optimize.rs  refactor.rs
src/utils/: conversion.rs  mod.rs  position.rs  text.rs  validation.rs
test/: spec_validation.rs  specification_tests.rs
test/corpus/: expressions.txt  literals.txt
test/highlight/: basic.nix
