[package]
name = "nix-parser"
version = "0.1.0"
edition = "2021"
authors = ["Nix Community Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nixos/nix-parser-next"
documentation = "https://docs.rs/nix-parser"
description = "A modern, fast, and extensible parser for the Nix language"
keywords = ["nix", "parser", "tree-sitter", "ast", "nixos"]
categories = ["parsing", "development-tools", "wasm"]

# [workspace]
# members = [
#     ".",
#     "tools/grammar-lab",
#     "tools/ast-explorer",
#     "tools/bench",
# ]

[dependencies]
tree-sitter = "0.25"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = { version = "0.12", optional = true }
rayon = { version = "1.8", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Testing and fuzzing
arbitrary = { version = "1.3", features = ["derive"], optional = true }
proptest = { version = "1.4", optional = true }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
insta = "1.34"

[build-dependencies]
cc = "1.0"

[features]
default = ["parallel", "cache"]
parallel = ["rayon"]
cache = ["lru"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "web-sys"]
python = ["pyo3"]
fuzzing = ["arbitrary", "proptest"]
plugins = []
cli = []
all = ["parallel", "cache", "wasm", "python", "fuzzing", "plugins", "cli"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = "fat"

[profile.bench]
inherits = "release"

# [[bench]]
# name = "parser_benchmark"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
